// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with edit permission 1`] = `
<div>
  <div
    className="quality-profile-grid"
  >
    <div
      className="quality-profile-grid-left"
    >
      <ProfileRules
        profile={
          Object {
            "actions": Object {
              "edit": true,
            },
          }
        }
      />
      <ProfileExporters
        exporters={Array []}
        profile={
          Object {
            "actions": Object {
              "edit": true,
            },
          }
        }
      />
      <ProfilePermissions
        profile={
          Object {
            "actions": Object {
              "edit": true,
            },
          }
        }
      />
    </div>
    <div
      className="quality-profile-grid-right"
    >
      <ProfileInheritance
        profile={
          Object {
            "actions": Object {
              "edit": true,
            },
          }
        }
        profiles={Array []}
        updateProfiles={[MockFunction]}
      />
      <ProfileProjects
        profile={
          Object {
            "actions": Object {
              "edit": true,
            },
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`renders without permissions 1`] = `
<div>
  <div
    className="quality-profile-grid"
  >
    <div
      className="quality-profile-grid-left"
    >
      <ProfileRules
        profile={Object {}}
      />
      <ProfileExporters
        exporters={Array []}
        profile={Object {}}
      />
    </div>
    <div
      className="quality-profile-grid-right"
    >
      <ProfileInheritance
        profile={Object {}}
        profiles={Array []}
        updateProfiles={[MockFunction]}
      />
      <ProfileProjects
        profile={Object {}}
      />
    </div>
  </div>
</div>
`;
